Fix not responsive dashboard

--- a/src/app/shared/components/dashboard/dashboard.component.scss
+++ b/src/app/shared/components/dashboard/dashboard.component.scss
@@ -1,12 +1,15 @@
 .sw-dashboard {
     display: flex;
     flex-flow: row wrap;
+    max-width: 100%;
+    margin-left: 0;
+    margin-right: 0;
 }
 
 .sw-widget {
     margin: 2rem;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    flex: 1 1 40%;
+    flex: 1 1 45%;
 }
 
 .sw-ui-card {
